crates/llvmkit-ir/tests/compile_fail/array_insert_wrong_element.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/array_insert_wrong_element.rs:33:36
   |
33 |             .build_arr_insert(arr, wrong, 0, "x") //~ ERROR mismatched types
   |              ----------------      ^^^^^ expected `IntValue<'_, i32>`, found `FloatValue<'_, f32>`
   |              |
   |              arguments to this method are incorrect
   |
   = note: expected struct `IntValue<'_, i32, Brand<'_>>`
              found struct `FloatValue<'_, f32>`
note: method defined here
  --> src/ir_builder.rs
   |
   |     pub fn build_arr_insert<E, L, Name>(
   |            ^^^^^^^^^^^^^^^^
